# InternationaleKernel

./: .gitignore  CMakeLists.txt  Makefile  loader.json  loader.toml
include/: inuos.h
include/executive/bm/: base.h
include/executive/cm/: api.h
include/executive/ga/: api.h
include/executive/id/: api.h
include/executive/jsn/: api.h
include/executive/ki/: api.h
include/executive/ldr/: api.h
include/executive/mm/: api.h
include/executive/nt/: api.h
include/executive/ob/: api.h
include/executive/pm/: api.h
include/executive/ps/: api.h
include/executive/pvm/: api.h
include/executive/rt/: api.h
include/inucode/: api.h
include/inuenv/: api.h
include/inufw/: api.h
include/inuhal/: api.h
include/inuldr/: api.h
include/ke/: base.h
inuenv/: CMakeLists.txt  base.c
inufw/: CMakeLists.txt
inufw/module/: CMakeLists.txt
inufw/platform/: CMakeLists.txt
inufw/platform/pc/: CMakeLists.txt  base.c
inufw/platform/pc/module/: CMakeLists.txt
inufw/platform/pc/module/ata/: CMakeLists.txt  base.c
inufw/platform/pc/module/elf/: CMakeLists.txt  base.c
inufw/platform/pc/module/framebuffer/: CMakeLists.txt  base.c
inufw/platform/pc/module/gdt/: CMakeLists.txt  base.c  gdt.s
inufw/platform/pc/module/include/ata/: api.h
inufw/platform/pc/module/include/elf/: api.h
inufw/platform/pc/module/include/framebuffer/: api.h
inufw/platform/pc/module/include/gdt/: api.h
inufw/platform/pc/module/include/int/: api.h
inufw/platform/pc/module/include/pic/: api.h
inufw/platform/pc/module/include/pio/: api.h
inufw/platform/pc/module/include/pit/: api.h
inufw/platform/pc/module/include/tar/: api.h
inufw/platform/pc/module/int/: CMakeLists.txt  base.c
inufw/platform/pc/module/pic/: CMakeLists.txt  base.c
inufw/platform/pc/module/pio/: CMakeLists.txt  base.c
inufw/platform/pc/module/pit/: CMakeLists.txt  base.c
inufw/platform/pc/module/tar/: CMakeLists.txt  base.c
inuhal/: CMakeLists.txt
inuhal/arch/: CMakeLists.txt
inuldr/: CMakeLists.txt
inuoskrnl/: CMakeLists.txt
inuoskrnl/bm/: CMakeLists.txt  base.c
inuoskrnl/cm/: CMakeLists.txt  base.c
inuoskrnl/ga/: CMakeLists.txt  base.c
inuoskrnl/jsn/: CMakeLists.txt  base.c
inuoskrnl/ke/: CMakeLists.txt  base.c
inuoskrnl/ki/: CMakeLists.txt  base.c
inuoskrnl/ldr/: CMakeLists.txt  base.c
inuoskrnl/mm/: CMakeLists.txt  base.c  mi.h
inuoskrnl/nt/: CMakeLists.txt  base.c
inuoskrnl/ob/: CMakeLists.txt  base.c
inuoskrnl/pm/: CMakeLists.txt  base.c
inuoskrnl/ps/: CMakeLists.txt  base.c
inuoskrnl/pvm/: CMakeLists.txt  base.c  pvmi.h
inuoskrnl/rt/: CMakeLists.txt  base.c  math.c
inuoskrnl/sm/: CMakeLists.txt  base.c
inuoskrnl/vm/: CMakeLists.txt  base.c
targets/inuldr/: IA32.ld
targets/inuoskrnl/: IA32.cmake  IA32.ld
(+15 files in other folders)
