
add_subdirectory(bm)
add_subdirectory(rt)
add_subdirectory(ob)
add_subdirectory(ps)
add_subdirectory(ki)
add_subdirectory(jsn)
add_subdirectory(cm)
add_subdirectory(vm)
add_subdirectory(nt)
add_subdirectory(ga)
add_subdirectory(sm)
add_subdirectory(pm)
add_subdirectory(ldr)
add_subdirectory(pvm)

if (${CMAKE_SYSTEM_PROCESSOR} STREQUAL "i686")
    add_executable(inuoskrnl)
    target_link_options(inuoskrnl PRIVATE "-Wl,-T../targets/inuoskrnl/IA32.ld")
    target_link_options(inuoskrnl PRIVATE ${KERNEL_LINK_FLAGS})
endif ()

target_link_libraries(inuoskrnl PRIVATE bm)
target_link_libraries(inuoskrnl PRIVATE rt)
target_link_libraries(inuoskrnl PRIVATE ob)
target_link_libraries(inuoskrnl PRIVATE ps)
target_link_libraries(inuoskrnl PRIVATE ki)
target_link_libraries(inuoskrnl PRIVATE pm)
target_link_libraries(inuoskrnl PRIVATE ga)
target_link_libraries(inuoskrnl PRIVATE cm)
target_link_libraries(inuoskrnl PRIVATE nt)
target_link_libraries(inuoskrnl PRIVATE sm)
target_link_libraries(inuoskrnl PRIVATE ldr)
target_link_libraries(inuoskrnl PRIVATE pvm)
target_link_libraries(inuoskrnl PRIVATE jsn)

add_subdirectory(ke)